# adam

./: .travis.yml  Cargo.toml  Podfile  README.md  circle.yml
Adam/: AppDelegate.swift  RealmObserver.swift  RxRealm.swift  ViewController.swift
Adam.xcodeproj/: project.pbxproj
Adam.xcodeproj/xcuserdata/nico.xcuserdatad/xcschemes/: Adam.xcscheme  xcschememanagement.plist
Adam.xcworkspace/: contents.xcworkspacedata
AdamTests/: AdamTests.swift
examples/: data.rs  geometry.rs
src/: lib.rs  main.rs
src/adam/utils/: rectangle.rs
src/data/: geometry.rs  mod.rs  rectangle.rs
